# Long_MarkDownReader

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/: Development_Summary.md  Enhanced_Features_Plan.md  Milestones.md  Requirement_Document.md
docs/blog/: Tauri_2.0_权限安全与插件授权.md  Tauri_单实例模式下的窗口唤醒与夺焦优化.md  TypeScript_开发与生产环境的构建差异.md  Vue3_深度监听下的配置持久化死循环防护.md  Windows_环境下的_GitHub_Release_自动化.md  Windows_环境下静默执行注册表关联的技术实践.md  从MistyEdit到胧编辑：一场关于品牌重塑与性能死磕的修行.md  穿透式拖拽系统的交互实现.md  跨应用标识符的数据自动化迁移方案.md
docs/pitfalls/ci-release/: GitHub_API_自动化分发中的字符转义问题.md
docs/pitfalls/frontend-vue/: 前端严格编译与组件逻辑调优.md  配置系统中的响应式死循环防护.md
docs/pitfalls/interaction-ux/: 拖拽识别中的影子遮挡与算法优化.md
docs/pitfalls/tauri-rust/: Tauri_2.0_能力系统与配置兼容性.md  Windows注册表与PowerShell默认值操作.md
scripts/: setup_context_menu.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: CommandPalette.vue  HoverPreview.vue  SettingsModal.vue
src/router/: index.ts
src/store/: app.ts
src/views/: LibraryMode.vue  QuickNote.vue  SettingsView.vue  TempMode.vue
